add deals-list adaptive

--- a/lk-vladelec-biznesa.html
+++ b/lk-vladelec-biznesa.html
@@ -83,8 +83,8 @@
         </aside>
         <div class="lk__body">
             <header class="lk-header">
-                <div class="container">
-                    <div class="lk-header__content">
+                <div class="lk-container">
+                    <div class="lk-header__desktop">
                         <div class="user-verif user-verif_error lk-header__verif">
                             <button class="user-verif__btn">Верификация не пройдена</button>
                             <div class="user-verif__main">
@@ -137,11 +137,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="lk-header__mobile">
+                            
+                        </div>
                     </div>
                 </div>
             </header>
             <main class="lk-main">
-                <div class="container">
+                <div class="lk-container">
                     <div class="lk-owner">
                         <h1 class="lk-title1">Владелец бизнеса</h1>
                         <h3 class="lk-title3 lk-owner__title3">Заявки на привлечение инвестиций</h3>
