--- a/login.html
+++ b/login.html
@@ -107,7 +107,7 @@
                                                 </div>
 
                                                 <button type="button" class="move-btn form__submit login__switch" data-from="login__register_2" data-to="login__register_3">Далее</button>
-                                                <button type="button" class="form__back-btn login__switch" data-from="login__register_2" data-to="login__register_1"></button>
+                                                <button type="button" class="back-btn form__back-btn login__switch" data-from="login__register_2" data-to="login__register_1"></button>
                                             </div>
 
                                             <div class="login__register login__register_3 login__hide">
@@ -124,15 +124,15 @@
                                                     <label for="form-register-pass-repeat" class="form__label">Повторите пароль</label>
                                                     <button type="button" class="form__show-pass"></button>
                                                 </div>
-                                                <div class="privacy form__privacy">
-                                                    <div class="privacy__box">
-                                                        <input type="checkbox" id="form-privacy" class="privacy__checkbox">
-                                                        <label for="form-privacy" class="privacy__btn"></label>
+                                                <div class="checkbox form__privacy">
+                                                    <div class="checkbox__box">
+                                                        <input type="checkbox" id="form-checkbox" class="checkbox__input">
+                                                        <label for="form-checkbox" class="checkbox__btn"></label>
                                                     </div>
-                                                    <div class="privacy__text privacy__text_big">Я принимаю условия Платформы <button type="button" class="privacy__open">iKapitalist</button></div>
+                                                    <div class="checkbox__text checkbox__text_big">Я принимаю условия Платформы <button type="button" class="checkbox__link open-privacy">iKapitalist</button></div>
                                                 </div>
                                                 <button type="submit" class="move-btn form__submit">Зарегистрироваться</button>
-                                                <button type="button" class="form__back-btn login__switch" data-from="login__register_3" data-to="login__register_2"></button>
+                                                <button type="button" class="back-btn form__back-btn login__switch" data-from="login__register_3" data-to="login__register_2"></button>
                                             </div>
                                         </form>
                                     </div>
@@ -148,7 +148,7 @@
                                         <label for="form-recovery-email" class="form__label">Email</label>
                                     </div>
                                     <button type="button" class="move-btn form__submit login__switch" data-from="login__recovery" data-to="login__recovery-new">Сбросить пароль</button>
-                                    <button type="button" class="form__back-btn login__switch" data-from="login__recovery" data-to="login__authorize"></button>
+                                    <button type="button" class="back-btn form__back-btn login__switch" data-from="login__recovery" data-to="login__authorize"></button>
                                 </form>                                
                             </div>
 
