--- a/lk-dobavit-kompanyu.html
+++ b/lk-dobavit-kompanyu.html
@@ -83,8 +83,8 @@
         </aside>
         <div class="lk__body">
             <header class="lk-header">
-                <div class="container">
-                    <div class="lk-header__content">
+                <div class="lk-container">
+                    <div class="lk-header__desktop">
                         <div class="user-verif user-verif_error lk-header__verif">
                             <button class="user-verif__btn">Верификация не пройдена</button>
                             <div class="user-verif__main">
@@ -138,10 +138,13 @@
                             </div>
                         </div>
                     </div>
+                    <div class="lk-header__mobile">
+                            
+                    </div>
                 </div>
             </header>
             <main class="lk-main">
-                <div class="container">
+                <div class="lk-container">
                     <div class="add-company">
                         <div class="row justify-content-between">
                             <div class="col-md-7">
