--- a/referal-form-broker.html
+++ b/referal-form-broker.html
@@ -262,12 +262,12 @@
                                             placeholder="Комментарий">
                                         <label for="form-comment" class="form__label">Комментарий</label>
                                     </div>
-                                    <div class="privacy form__privacy">
-                                        <div class="privacy__box">
-                                            <input type="checkbox" id="form-privacy" class="privacy__checkbox">
-                                            <label for="form-privacy" class="privacy__btn"></label>
+                                    <div class="checkbox form__privacy">
+                                        <div class="checkbox__box">
+                                            <input type="checkbox" id="form-checkbox" class="checkbox__input">
+                                            <label for="form-checkbox" class="checkbox__btn"></label>
                                         </div>
-                                        <div class="privacy__text">Нажимая кнопку «Стать Советником», я даю свое
+                                        <div class="checkbox__text">Нажимая кнопку «Стать Советником», я даю свое
                                             согласие на обработку моих персональных данных, в соответствии с Законом
                                             Республики Казахстан от 21 мая 2013 года № 94-V «О персональных данных и их
                                             защите», на условиях и для целей, определенных в Согласии на обработку
