add business-owner adaptive

--- a/lk-dobavit-kompanyu.html
+++ b/lk-dobavit-kompanyu.html
@@ -83,63 +83,71 @@
         </aside>
         <div class="lk__body">
             <header class="lk-header">
-                <div class="lk-container">
-                    <div class="lk-header__desktop">
-                        <div class="user-verif user-verif_error lk-header__verif">
-                            <button class="user-verif__btn">Верификация не пройдена</button>
-                            <div class="user-verif__main">
-                                <div class="user-verif__item">Подтверждение Email</div>
-                                <div class="user-verif__item user-verif__item_error">Проверка по ИИН</div>
-                                <div class="user-verif__item user-verif__item_warning">Договор с платформой</div>
-                                <div class="user-verif__item user-verif__item_error">Онлайн тест</div>
+                <div class="lk-header__desktop">
+                    <div class="container">
+                        <div class="lk-header__desktop-content">
+                            <div class="user-verif user-verif_error lk-header__verif">
+                                <button class="user-verif__btn">Верификация не пройдена</button>
+                                <div class="user-verif__main">
+                                    <div class="user-verif__item">Подтверждение Email</div>
+                                    <div class="user-verif__item user-verif__item_error">Проверка по ИИН</div>
+                                    <div class="user-verif__item user-verif__item_warning">Договор с платформой</div>
+                                    <div class="user-verif__item user-verif__item_error">Онлайн тест</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="user-panel">
-                            <button class="user-panel__btn">
-                                <div class="user-panel__name">Нурбек Раев</div>
-                                <img src="dist/images/user-avatar.png" alt="" class="user-panel__img">
-                            </button>
-                            <div class="user-panel__main">
-                                <div class="user-panel__item">
-                                    <a href="#" class="user-panel__link">
-                                        <img src="dist/images/icons/user-panel/file.svg" alt="" class="user-panel__icon">
-                                        Мои договора
-                                    </a>
-                                </div>
-                                <div class="user-panel__item">
-                                    <a href="#" class="user-panel__link">
-                                        <img src="dist/images/icons/user-panel/edit.svg" alt="" class="user-panel__icon">
-                                        Редактировать профиль
-                                    </a>
-                                </div>
-                                <div class="user-panel__item">
-                                    <img src="dist/images/icons/user-panel/lang.svg" alt="" class="user-panel__icon">
-                                    <div class="user-panel__lang">
-                                        <button class="user-panel__lang-btn user-panel__lang-btn_active">
-                                            <span class="user-panel__lang-name">Казахский</span>
-                                            <img src="dist/images/icons/user-panel/kz.png" alt="" class="user-panel__lang-img">
-                                        </button>
-                                        <button class="user-panel__lang-btn">
-                                            <span class="user-panel__lang-name">Русский</span>
-                                            <img src="dist/images/icons/user-panel/ru.png" alt="" class="user-panel__lang-img">
-                                        </button>
-                                        <button class="user-panel__lang-btn">
-                                            <span class="user-panel__lang-name">English</span>
-                                            <img src="dist/images/icons/user-panel/gb.png" alt="" class="user-panel__lang-img">
-                                        </button>
+                            <div class="user-panel">
+                                <button class="user-panel__btn">
+                                    <div class="user-panel__name">Нурбек Раев</div>
+                                    <img src="dist/images/user-avatar.png" alt="" class="user-panel__img">
+                                </button>
+                                <div class="user-panel__main">
+                                    <div class="user-panel__item">
+                                        <a href="#" class="user-panel__link">
+                                            <img src="dist/images/icons/user-panel/file.svg" alt="" class="user-panel__icon">
+                                            Мои договора
+                                        </a>
                                     </div>
-                                </div>
-                                <div class="user-panel__item user-panel__exit">
-                                    <a href="#" class="user-panel__link">
-                                        <img src="dist/images/icons/user-panel/exit.svg" alt="" class="user-panel__icon">
-                                        Выйти
-                                    </a>
+                                    <div class="user-panel__item">
+                                        <a href="#" class="user-panel__link">
+                                            <img src="dist/images/icons/user-panel/edit.svg" alt="" class="user-panel__icon">
+                                            Редактировать профиль
+                                        </a>
+                                    </div>
+                                    <div class="user-panel__item">
+                                        <img src="dist/images/icons/user-panel/lang.svg" alt="" class="user-panel__icon">
+                                        <div class="user-panel__lang">
+                                            <button class="user-panel__lang-btn user-panel__lang-btn_active">
+                                                <span class="user-panel__lang-name">Казахский</span>
+                                                <img src="dist/images/icons/user-panel/kz.png" alt="" class="user-panel__lang-img">
+                                            </button>
+                                            <button class="user-panel__lang-btn">
+                                                <span class="user-panel__lang-name">Русский</span>
+                                                <img src="dist/images/icons/user-panel/ru.png" alt="" class="user-panel__lang-img">
+                                            </button>
+                                            <button class="user-panel__lang-btn">
+                                                <span class="user-panel__lang-name">English</span>
+                                                <img src="dist/images/icons/user-panel/gb.png" alt="" class="user-panel__lang-img">
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="user-panel__item user-panel__exit">
+                                        <a href="#" class="user-panel__link">
+                                            <img src="dist/images/icons/user-panel/exit.svg" alt="" class="user-panel__icon">
+                                            Выйти
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="lk-header__mobile">
-                            
+                </div>
+                <div class="lk-header__mobile">
+                    <div class="container">
+                        <div class="lk-header__mobile-content">
+                            <button class="back-btn"></button>
+                            <div class="lk-header__mobile-title">Привлечение инвестиций</div>
+                            <button class="open-filter-btn"></button>
+                        </div>
                     </div>
                 </div>
             </header>
