--- a/lk-vladelec-biznesa.html
+++ b/lk-vladelec-biznesa.html
@@ -83,79 +83,89 @@
         </aside>
         <div class="lk__body">
             <header class="lk-header">
-                <div class="lk-container">
-                    <div class="lk-header__desktop">
-                        <div class="user-verif user-verif_error lk-header__verif">
-                            <button class="user-verif__btn">Верификация не пройдена</button>
-                            <div class="user-verif__main">
-                                <div class="user-verif__item">Подтверждение Email</div>
-                                <div class="user-verif__item user-verif__item_error">Проверка по ИИН</div>
-                                <div class="user-verif__item user-verif__item_warning">Договор с платформой</div>
-                                <div class="user-verif__item user-verif__item_error">Онлайн тест</div>
+                <div class="lk-header__desktop">
+                    <div class="container">
+                        <div class="lk-header__desktop-content">
+                            <div class="user-verif user-verif_error lk-header__verif">
+                                <button class="user-verif__btn">Верификация не пройдена</button>
+                                <div class="user-verif__main">
+                                    <div class="user-verif__item">Подтверждение Email</div>
+                                    <div class="user-verif__item user-verif__item_error">Проверка по ИИН</div>
+                                    <div class="user-verif__item user-verif__item_warning">Договор с платформой</div>
+                                    <div class="user-verif__item user-verif__item_error">Онлайн тест</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="user-panel">
-                            <button class="user-panel__btn">
-                                <div class="user-panel__name">Нурбек Раев</div>
-                                <img src="dist/images/user-avatar.png" alt="" class="user-panel__img">
-                            </button>
-                            <div class="user-panel__main">
-                                <div class="user-panel__item">
-                                    <a href="#" class="user-panel__link">
-                                        <img src="dist/images/icons/user-panel/file.svg" alt="" class="user-panel__icon">
-                                        Мои договора
-                                    </a>
-                                </div>
-                                <div class="user-panel__item">
-                                    <a href="#" class="user-panel__link">
-                                        <img src="dist/images/icons/user-panel/edit.svg" alt="" class="user-panel__icon">
-                                        Редактировать профиль
-                                    </a>
-                                </div>
-                                <div class="user-panel__item">
-                                    <img src="dist/images/icons/user-panel/lang.svg" alt="" class="user-panel__icon">
-                                    <div class="user-panel__lang">
-                                        <button class="user-panel__lang-btn user-panel__lang-btn_active">
-                                            <span class="user-panel__lang-name">Казахский</span>
-                                            <img src="dist/images/icons/user-panel/kz.png" alt="" class="user-panel__lang-img">
-                                        </button>
-                                        <button class="user-panel__lang-btn">
-                                            <span class="user-panel__lang-name">Русский</span>
-                                            <img src="dist/images/icons/user-panel/ru.png" alt="" class="user-panel__lang-img">
-                                        </button>
-                                        <button class="user-panel__lang-btn">
-                                            <span class="user-panel__lang-name">English</span>
-                                            <img src="dist/images/icons/user-panel/gb.png" alt="" class="user-panel__lang-img">
-                                        </button>
+                            <div class="user-panel">
+                                <button class="user-panel__btn">
+                                    <div class="user-panel__name">Нурбек Раев</div>
+                                    <img src="dist/images/user-avatar.png" alt="" class="user-panel__img">
+                                </button>
+                                <div class="user-panel__main">
+                                    <div class="user-panel__item">
+                                        <a href="#" class="user-panel__link">
+                                            <img src="dist/images/icons/user-panel/file.svg" alt="" class="user-panel__icon">
+                                            Мои договора
+                                        </a>
+                                    </div>
+                                    <div class="user-panel__item">
+                                        <a href="#" class="user-panel__link">
+                                            <img src="dist/images/icons/user-panel/edit.svg" alt="" class="user-panel__icon">
+                                            Редактировать профиль
+                                        </a>
+                                    </div>
+                                    <div class="user-panel__item">
+                                        <img src="dist/images/icons/user-panel/lang.svg" alt="" class="user-panel__icon">
+                                        <div class="user-panel__lang">
+                                            <button class="user-panel__lang-btn user-panel__lang-btn_active">
+                                                <span class="user-panel__lang-name">Казахский</span>
+                                                <img src="dist/images/icons/user-panel/kz.png" alt="" class="user-panel__lang-img">
+                                            </button>
+                                            <button class="user-panel__lang-btn">
+                                                <span class="user-panel__lang-name">Русский</span>
+                                                <img src="dist/images/icons/user-panel/ru.png" alt="" class="user-panel__lang-img">
+                                            </button>
+                                            <button class="user-panel__lang-btn">
+                                                <span class="user-panel__lang-name">English</span>
+                                                <img src="dist/images/icons/user-panel/gb.png" alt="" class="user-panel__lang-img">
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="user-panel__item user-panel__exit">
+                                        <a href="#" class="user-panel__link">
+                                            <img src="dist/images/icons/user-panel/exit.svg" alt="" class="user-panel__icon">
+                                            Выйти
+                                        </a>
                                     </div>
                                 </div>
-                                <div class="user-panel__item user-panel__exit">
-                                    <a href="#" class="user-panel__link">
-                                        <img src="dist/images/icons/user-panel/exit.svg" alt="" class="user-panel__icon">
-                                        Выйти
-                                    </a>
-                                </div>
                             </div>
                         </div>
-                        <div class="lk-header__mobile">
-                            
+                    </div>
+                </div>
+                <div class="lk-header__mobile">
+                    <div class="container">
+                        <div class="lk-header__mobile-content">
+                            <a href="./lk-spisok-sdelok.html" class="back-btn"></a>
+                            <div class="lk-header__mobile-title">Владелец бизнеса</div>
+                            <button class="open-filter-btn"></button>
                         </div>
                     </div>
                 </div>
             </header>
             <main class="lk-main">
-                <div class="lk-container">
+                <div class="container">
                     <div class="lk-owner">
-                        <h1 class="lk-title1">Владелец бизнеса</h1>
-                        <h3 class="lk-title3 lk-owner__title3">Заявки на привлечение инвестиций</h3>
-                        <div class="lk-owner__controls">
-                            <div class="search lk-owner__search">
-                                <input type="text" class="search__field" placeholder="Поиск">
-                                <button class="search__btn">
-                                    <img src="dist/images/icons/search.svg" alt="Search">
-                                </button>
+                        <div class="lk-owner__header">
+                            <h1 class="lk-title1 lk-title-desktop">Владелец бизнеса</h1>
+                            <h3 class="lk-title3 lk-owner__title3">Заявки на привлечение инвестиций</h3>
+                            <div class="lk-owner__controls">
+                                <div class="search lk-owner__search">
+                                    <input type="text" class="search__field" placeholder="Поиск">
+                                    <button class="search__btn">
+                                        <img src="dist/images/icons/search.svg" alt="Search">
+                                    </button>
+                                </div>
+                                <a href="./lk-dobavit-kompanyu.html" class="lk-btn lk-owner__create">Создать заявку</a>
                             </div>
-                            <a href="./lk-dobavit-kompanyu.html" class="lk-btn lk-owner__create">Создать заявку</a>
                         </div>
                         <div class="table lk-owner__table">
                             <div class="table__filters">
@@ -180,19 +190,19 @@
                                         <th>
                                             <button class="table__sort">Сумма</button>
                                         </th>
-                                        <th>
+                                        <th class="table__percent">
                                             <button class="table__sort">Процент</button>
                                         </th>
-                                        <th>
+                                        <th class="table__commission">
                                             <button class="table__sort">Коммисия</button>
                                         </th>
-                                        <th>
+                                        <th class="table__period">
                                             <button class="table__sort">Срок(мес)</button>
                                         </th>
-                                        <th>
+                                        <th class="table__date">
                                             <button class="table__sort">Дата</button>
                                         </th>
-                                        <th>
+                                        <th class="table__statuses">
                                             <button class="table__sort">Статус</button>
                                         </th>
                                     </tr>
