--- a/lk-vladelec-biznesa.html
+++ b/lk-vladelec-biznesa.html
@@ -168,18 +168,19 @@
                             </div>
                         </div>
                         <div class="table lk-owner__table">
-                            <div class="table__filters">
-                                <div class="table__filters-left">
-                                    <button class="filter-btn table__filter-btn">По компаниям</button>
-                                    <button class="filter-btn table__filter-btn">По типу сделки</button>
-                                    <input type="number" class="filter-field table__filter-field" placeholder="Сумма от">
-                                    <input type="number" class="filter-field table__filter-field" placeholder="Сумма до">
-                                    <button class="filter-btn table__filter-btn">По дате</button>
+                            <div class="filter-menu table__filters">
+                                <div class="filter-menu__left">
+                                    <button class="filter-btn filter-menu__btn table__filter-btn">По компаниям</button>
+                                    <button class="filter-btn filter-menu__btn table__filter-btn">По типу сделки</button>
+                                    <input type="number" class="filter-field filter-menu__field table__filter-field" placeholder="Сумма от">
+                                    <input type="number" class="filter-field filter-menu__field table__filter-field" placeholder="Сумма до">
+                                    <button class="filter-btn filter-menu__btn table__filter-btn">По дате</button>
                                 </div>
-                                <div class="table__filters-right">
-                                    <button class="filter-btn table__filter-btn">Настроить таблицу</button>
-                                    <button class="filter-btn table__filter-btn table__filter-btn_export">Экспортировать</button>
+                                <div class="filter-menu__right">
+                                    <button class="filter-btn filter-menu__btn table__filter-btn">Настроить таблицу</button>
+                                    <button class="filter-btn filter-btn_export filter-menu__btn table__filter-btn">Экспортировать</button>
                                 </div>
+                                <button class="back-btn close-filter-btn filter-menu__close "></button>
                             </div>
                             <div class="table__wrapper">
                                 <table class="table__main">
